# PolyAnalysis

./: .gitignore  PROJECT_SUMMARY.md  README.md  UPLOAD_PLAN.md  analyze.py  pyproject.toml
docs/: fetcher.md  项目说明与报告解读.md
openspec/changes/archive/2026-03-13-incremental-data-fetch/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-13-incremental-data-fetch/specs/: cli-entry.md  data-cache.md  incremental-fetch.md
openspec/changes/incremental-data-fetch-v2/: design.md  proposal.md  tasks.md
openspec/changes/incremental-data-fetch-v2/specs/batch-processing/: spec.md
openspec/changes/incremental-data-fetch-v2/specs/incremental-fetch/: spec.md
openspec/changes/incremental-data-fetch-v2/specs/progress-tracking/: spec.md
openspec/changes/incremental-data-fetch-v2/specs/smart-cache/: spec.md
openspec/changes/wallet-discovery/: design.md  proposal.md  tasks.md
openspec/changes/wallet-discovery/specs/: data-sources.md  discovery-core.md  on-chain-discovery.md
polycopilot/: __init__.py  analyzer.py  batch.py  cache.py  discovery.py  fetcher.py  processor.py
tests/: diagnose_data.py  test_fetcher.py  test_full_analysis.py  test_gamma_api.py  test_pipeline.py
